# people_spawner

./: Dockerfile  Makefile  docker-compose.yml  pyproject.toml
api/core/: settings.py  urls.py
